# gemuki-bot

./: Cargo.toml  README.md
bot/: Cargo.toml
bot/src/: cache.rs  lib.rs  paginate.rs  steam.rs
bot/src/commands/: game.rs  gamekey.rs  keylist.rs  mod.rs  raffle.rs  statistic.rs  version.rs
entity/: Cargo.toml
entity/src/: game.rs  game_key.rs  key_raffle.rs  key_raffle_key.rs  key_raffle_winner.rs  keylist.rs  keylist_access.rs  keylist_key.rs  lib.rs  platform.rs  prelude.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240722_083119_seeding_data.rs  m20240723_102800_game_image_link.rs  m20240725_122713_game_key_notes.rs  m20240819_141945_create_keylist.rs  m20241023_084329_add_raffles.rs  m20241023_131910_add_owner_id_to_keys.rs  m20250603_114102_key_expiry_date.rs
service/: Cargo.toml
service/src/: lib.rs  mutation.rs  query.rs
src/: main.rs
