[package]
name = "gemuki-bot"
version = "0.1.1"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
gemuki-service = { path = "../service" }
serde = { version = "1.0.213", features = ["derive"] }
dotenvy = "0.15.7"
poise = "0.6.1"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.22"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
thiserror = "1.0.65"
chrono = "0.4.38"
url = "2.5.2"
async-mutex = "1.4.0"
rand = "0.8.5"
reqwest = "0.12.8"
serde_json = "1.0.132"