[package]
name = "gemuki-bot"
version = "0.1.1"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
gemuki-service = { path = "../service" }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
poise = "0.6.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs"] }
log = "0.4.27"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
thiserror = "2.0.12"
chrono = "0.4.41"
url = "2.5.4"
async-mutex = "1.4.1"
rand = "0.9.1"
reqwest = "0.12.19"
serde_json = "1.0.140"
tempfile = "3.20.0"